classDiagram
    namespace EasySave.ConsoleApp {
        class Program {
            +Main(args)$
            -BuildContainer(): ServiceContainer$
        }
        class App {
            +Run(args)
            -RunInteractive()
            -RunCli()
        }
    }

    namespace EasySave.ConsoleApp.Controllers {
        class MenuController {
            +HandleListJobs()
            +HandleExecuteOne()
            +HandleExecuteAll()
        }
    }

    namespace EasySave.ConsoleApp.Views {
        class IConsoleView { <<interface>> }
        class ConsoleView {
            +ShowMainMenu()
            +ShowJobList(jobs)
            +ShowProgress(jobName, progress)
        }
        class BackupJobFormData {
            +Name: string
            +SourcePath: string
            +Type: BackupType
        }
    }

    namespace EasySave.ConsoleApp.Localization {
        class ILocalizer { <<interface>> }
        class ResourceLocalizer {
            +Get(key): string
            +SetLanguage(culture)
        }
    }

    Program --> App
    App --> MenuController
    App --> IConsoleView
    MenuController --> IConsoleView
    ConsoleView ..|> IConsoleView
    ConsoleView --> ILocalizer
    ConsoleView ..> BackupJobFormData : Retourne